Add 1-5: java12, java13 and java14